--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,24 @@
 {
-    "name": "codespace/lista-tarefas",
-    "type": "project",
+    "name": "guiam/lista-tarefas",
     "autoload": {
         "psr-4": {
-            "Codespace\\ListaTarefas\\": "src/"
+            "Guiam\\ListaTarefas\\": "src/"
         }
     },
     "authors": [
         {
             "name": "Guilherme Amaral",
-            "email": "gui.amaral123@outlook.com"
+            "email": "88007295+Guimrl@users.noreply.github.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phan/phan": "^5.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "^3.7"
+    },
+    "scripts": {
+        "start": "php -S localhost:8000 -t public"
+    }
 }
